--- a/analysen/Biber-Musterlösung/analyse.ipynb
+++ b/analysen/Biber-Musterlösung/analyse.ipynb
@@ -307,7 +307,7 @@
     "tags": []
    },
    "source": [
-    "Ein erster Überblick"
+    "Einen ersten Überblick verschaffen"
    ]
   },
   {
@@ -324,6 +324,89 @@
    "outputs": [],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86c8807c-0708-42ce-b03a-0a53ee514139",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"Jahr\").describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5459f766-2a41-4210-b7a7-33394598643e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby([\"Jahr\", \"Klasse\"]).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8031093f-dea2-499a-9f11-a231730605fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['Jahr'] == 2025] \\\n",
+    "  .drop(columns=['Jahr'])  \\\n",
+    "  .groupby([\"Aufgabe\"])    \\\n",
+    "  .describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131caee8-07a8-4f9b-983c-05ee7921d619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby([\"Klasse\",\"Name\"]).describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9ae213f-412c-4b54-a939-9f3ef35179b1",
+   "metadata": {},
+   "source": [
+    "oder erst Filtern und dann pivotisieren"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8e3b31b-40a8-4239-a32e-eff2197815e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['Jahr'] == 2025].pivot_table(\n",
+    "    index   = ['Aufgabe'], # neue Zeilen\n",
+    "    columns = ['Jahr', 'Klasse'], # neue Spalten\n",
+    "    values  = ['Punkte'], # Werte, auf die die Aggregationsfunktionen angewendet werden\n",
+    "    aggfunc = ['mean','median']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "531bd4d6-52fe-4bcd-8b0f-4108a4ae139e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.pivot_table(\n",
+    "    index   = ['Name'],\n",
+    "    columns = ['Aufgabe'],\n",
+    "    values  = ['Punkte'],\n",
+    "    aggfunc = ['sum'],\n",
+    "    margins = True,\n",
+    "    margins_name = 'Total'\n",
+    ")"
    ]
   },
   {
