--- a/analysen/Biber/analyse.ipynb
+++ b/analysen/Biber/analyse.ipynb
@@ -156,144 +156,17 @@
    },
    "outputs": [],
    "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a24a4e64-e915-4a79-9fa8-7c18cfa1cd4a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "source": [
-    "Um uns mit den Rohdaten einfacher vertraut machen zu können, benötigen wir in Jupyter noch eine Bibliothek wie `itables`. "
+    "df[\"Punkte\"].describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeeaa998-dff3-46f3-9669-ed0ad2a494af",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
+   "id": "a7e803e0-0b60-4869-9630-387aceb72a7c",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import itables\n",
-    "\n",
-    "itables.init_notebook_mode()\n",
-    "itables.options.maxBytes = \"1024KB\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d5c10e3-7e08-43ed-abbf-332595951b31",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "source": [
-    "Jetzt sieht die Standardausgabe eines DataFrames so aus:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "489815b7-828e-4280-8a8d-af3270549b3a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "600ce7a1-a224-4be9-b795-1c1575367419",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "source": [
-    "Zum schnellen Filtern, Durchsuchen und Exportieren der Rohdaten definieren wir noch zwei praktische Helfer-Funktionen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c1eec53-1ad0-4676-8646-22cb801296e6",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def filter_in(df):\n",
-    "    numeric_cols = df.select_dtypes(include='number').columns\n",
-    "    non_numeric_cols = df.select_dtypes(exclude='number').columns\n",
-    "    non_numeric_cols_indices = [df.columns.get_loc(c) for c in non_numeric_cols]\n",
-    "    itables.show(df, \n",
-    "                 layout={\"top1\": \"searchPanes\"},\n",
-    "                 buttons = [\"pageLength\", \"copyHtml5\", \"csvHtml5\", \"excelHtml5\"],\n",
-    "                 searchPanes={\"layout\": 'columns-' + str(len(df.columns) - len(numeric_cols)), \"cascadePanes\": True, \"columns\": non_numeric_cols_indices})\n",
-    "\n",
-    "def suche_in(df):\n",
-    "    itables.show(df,\n",
-    "                 layout={\"top1\": \"searchBuilder\" },\n",
-    "                 buttons = [\"pageLength\", \"copyHtml5\", \"csvHtml5\", \"excelHtml5\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1ad04cd-a096-44ad-87af-d6b502eb72cb",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "filter_in(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6145576-7d4f-4777-baac-fd259ba62c63",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "skip"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "suche_in(df)"
+    "df.groupby(['Jahr', 'Klassenstufe', 'Klasse']).describe()"
    ]
   },
   {
@@ -327,10 +200,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7e803e0-0b60-4869-9630-387aceb72a7c",
+   "id": "d0169d41-63f5-446f-afa2-16a27e379942",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.pivot_table(values  = \"Punkte\",\n",
+    "               index   = [\"Klasse\"],\n",
+    "               aggfunc = [\"mean\"]).sort_values(by=(\"mean\", \"Punkte\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4abec61a-5ef4-41e0-bc57-0d8d26572d66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.pivot_table(values  = \"Punkte\",\n",
+    "               index   = [\"Jahr\", \"Klasse\"],\n",
+    "               aggfunc = [\"min\", \"median\", \"mean\", \"max\"]).sort_values(by=(\"mean\", \"Punkte\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
