More Ollama Examples

--- a/vorlagen/analyse-mit-Ollama.ipynb
+++ b/vorlagen/analyse-mit-Ollama.ipynb
@@ -11,8 +11,20 @@
     "tags": []
    },
    "source": [
-    "# Titel der Analyse\n",
-    "\n",
+    "# Titel der Analyse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75c77fe5-d4dc-430a-998c-8e1b80bfc251",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "source": [
     "Untertitel\n",
     "\n",
     "Ihr Name"
@@ -25,12 +37,12 @@
     "editable": true,
     "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
    "source": [
-    "## Setup"
+    "## LLM-Setup"
    ]
   },
   {
@@ -74,7 +86,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -107,7 +119,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -123,7 +135,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -158,9 +170,8 @@
    "id": "cd29af29-7efc-4014-8501-789db93ae649",
    "metadata": {
     "editable": true,
-    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -174,7 +185,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -189,7 +200,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -204,7 +215,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -219,7 +230,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -235,7 +246,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -250,7 +261,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -261,11 +272,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73d836a5-eed0-4e13-a744-ee145cab73a7",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Priming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b64bc536-e1f3-4f9c-b698-27de2c3366b0",
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -276,18 +301,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "825c1d3f-a849-4663-a046-f31f63cccf42",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "priming = \"You are the best Python coder in the world and know Pandas inside out. You give short and informative answers. You code like a student in 10th grade.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9553f17b-d301-4051-a30a-f0e9289b615c",
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
     "messages = [\n",
-    "    {\"role\": \"system\", \"content\": \"You are the best Python coder in the world and know Pandas and Matplotlib inside out. You give short and informative answers. You code like a student in 10th grade.\"}\n",
+    "    {\"role\": \"system\", \"content\": priming}\n",
     "]"
    ]
   },
@@ -296,9 +337,8 @@
    "id": "d65b75d0-75fd-4e6d-9387-87389836229f",
    "metadata": {
     "editable": true,
-    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -312,7 +352,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -327,7 +367,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -342,7 +382,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -357,7 +397,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -372,7 +412,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -387,7 +427,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -400,7 +440,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -415,7 +455,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -431,7 +471,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -447,7 +487,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -462,7 +502,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -475,7 +515,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -490,7 +530,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -503,7 +543,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
@@ -518,7 +558,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
