--- a/vorlagen/KI-mit-Ollama.ipynb
+++ b/vorlagen/KI-mit-Ollama.ipynb
@@ -652,6 +652,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9d41708-157d-49db-bda6-275c8e04af14",
+   "metadata": {},
+   "source": [
+    "Modellauswahl: https://ollama.com/search\n",
+    "\n",
+    "Achte auf die Grösse des Modells (in GB) im Verhältnis zum verfügbaren Arbeitsspeicher deines Computers. Grösser heisst i.d.R. auch langsamer - aber nicht immer und unbedingt besser."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "545b7c17-f77f-4c56-9c90-289edda06ca8",
    "metadata": {
     "editable": true,
@@ -667,11 +677,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "681d5d18-940c-41ab-867b-c9733087edc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = 'gemma3:270m'\n",
+    "#model = 'deepseek-r1:1.5b'\n",
+    "#model = 'codegemma:2b'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6542e525-f913-4415-8dc7-86243229f81e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.pull('gemma3:270m')"
+    "client.pull(model)"
    ]
   },
   {
@@ -695,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = client.chat(model='gemma3:270m', messages=[\n",
+    "response = client.chat(model=model, messages=[\n",
     "  {\n",
     "    'role': 'user',\n",
     "    'content': 'What is the best Programming Language and why is my teacher using Raku over Python for his teaching-tool-box?',\n",
