--- a/vorlagen/Ollama-Python-Demo.ipynb
+++ b/vorlagen/Ollama-Python-Demo.ipynb
@@ -46,13 +46,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd372201-3066-4dd3-b84b-d431e66414b5",
+   "metadata": {},
+   "source": [
+    "Modellauswahl: https://ollama.com/search\n",
+    "\n",
+    "Achte auf die Grösse des Modells (in GB) im Verhältnis zum verfügbaren Arbeitsspeicher deines Computers. Grösser heisst i.d.R. auch langsamer - aber nicht immer und unbedingt besser."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "07434b71-2779-44d6-984d-a402f7212166",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'gemma3:270m'"
+    "model = 'gemma3:270m'\n",
+    "#model = 'deepseek-r1:1.5b'\n",
+    "#model = 'codegemma:2b'"
    ]
   },
   {
